Changelog
=========

5.1-dev - (unreleased)
----------------------

5.0 - (2012-11-22)
------------------
* Bug fix: use new api from eea.rdfmarshaller for serial title field
  [tiberich #3981]

4.9 - (2012-09-27)
------------------
* Bug fix: Cleanup zope.app.content.interfaces.IContentType dependency
  [voineali]
* Change: Update references to eea.depiction (formerly valentine.imagescales)
  [voineali refs #5497]

4.8 - (2012-07-13)
------------------
* Feature: use eea.relations widget if available for relatedItems
  [ichimdav #4705]
* Bug fix: use a max filesize validator for report file field
  [tiberich #5259]
* Bug Fix: Fixed duplicate key for translation in .pt
  [prospchr refs #5162]

4.7 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Bug fix: use try/except in event handler to avoid error in
  eea.indicators test
  [tiberich]
* Bug fix: Fixed publications subobjects as after migration
  to Plone 4 was reseted to inherit from parent. Now available
  subojects will be those defined under portal_type.
  [ghicaale refs #5178]
* Change: Change code in eea.reports to fix translation problem
  [prospchr refs #5159]

4.6 - (2012-03-05)
------------------
* Bug fix: Fixed dependencies to eea.forms and eea.vocab
  [voineali]

4.5 - (2012-02-06)
------------------
* Bug fix: Removed eea.rdfmarshaller dependency
  [voineali]

4.4 - (2011-12-16)
------------------
* Bug fix: Made Publication file field non-required
  [voineali #4833]

4.3 - (2011-11-24)
------------------
* Bug fix: Fixed 'NoneType' and 'str' error on some publications view
  [ghicaale]
* Bug fix: Allow reports_view browser_view to be customized by portal_view_customizations by making it inherit
  from BrowserView instead of object
  [ichimdav #4783]

4.2 - (2011-11-23)
------------------
* Bug fix: Removed duplicated multimedia in template, now we have viewlets.
  [demarant #4779]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg
